tests/baselines/reference/exportsAndImportsWithContextualKeywordNames01(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
t3.ts(1,17): error TS1214: Identifier expected. 'yield' is a reserved word in strict mode. Modules are automatically in strict mode.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== t1.ts (0 errors) ====
    let set = {
        set foo(x: number) {
        }
    }
    let get = 10;
    
    export { set, get };
    
==== t2.ts (0 errors) ====
    import * as set from "./t1";
    
==== t3.ts (1 errors) ====
    import { set as yield } from "./t1";
                    ~~~~~
!!! error TS1214: Identifier expected. 'yield' is a reserved word in strict mode. Modules are automatically in strict mode.
    
==== t4.ts (0 errors) ====
    import { get } from "./t1";